Editar producto solo para el usuario que lo creo

--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -34,7 +34,7 @@
 									<article class="product-box_data">
 										<h2><%=productosMain[i].nombre %></h2>
 										<p><%=productosMain[i].descripcion %></p>
-										<p>Comentarios: <%= cantComentarios%></p>
+										<p>Comentarios: 5</p>
 									</article>
 								</a>
 							</section>
