--- a/trabajoIntegrador/views/search-results.ejs
+++ b/trabajoIntegrador/views/search-results.ejs
@@ -32,8 +32,8 @@
 										<article class="product-box_data">
 											<h2><%=listaProductos[i].nombre %></h2>
 											<p><%=listaProductos[i].descripcion %></p>
-											<p>Comentarios: <%=productosMain[i].comentario.length %></p>
-											<p>Creador: <a href="profile/<%= productosMain[i].perfil.id %>"> <%= productosMain[i].perfil.usuario %> </a></p>
+											<p>Comentarios: <%=  %></p>
+											<p>Creador: <a href="profile/<%= listaProductos[i].id_perfil %>"> <%= listaProductos[i].id_perfil %> </a></p>
 										</article>
 									</a>
 								</section>
