--- a/trabajoIntegrador/views/profile-edit.ejs
+++ b/trabajoIntegrador/views/profile-edit.ejs
@@ -42,7 +42,7 @@
 
 						<article  class="inputForm">
 							<i class="fa-regular fa-image fa-xl icon"></i>
-							<input type="text" name="fotodeperfil" placeholder="Foto de Perfil" class="text" value="<%= perfil.foto%>">
+							<input type="text" name="fotodeperfil" placeholder="Foto de Perfil" class="text" value="<%= perfil.foto_perfil%>">
 						</article >
 
 						<button type="submit" class="cambios">Guardar cambios</button>
