--- a/trabajoIntegrador/views/product.ejs
+++ b/trabajoIntegrador/views/product.ejs
@@ -53,17 +53,12 @@
 									</article>
 								<% } %>
 							</section>
-							<form class="form" action="/product/comentario/<%= producto.id %>" method="POST">
-							<input class="form-input" type="text" value="" placeholder="Agregar comentario" name="comentario">
-							<% if (locals.user != undefined) { %>
-									<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
-								</form>							 
 							
-							<% } else { %>
-								<p class="nocomentario" style="color: red;">Debe estar logueado para comentar</p>
-							<% } %>
+							<form class="form" action="/product/comentario/<%= producto.id %>" method="POST">
+								<input class="form-input" type="text" value="" <% if(locals.user){%> placeholder="Escriba su comentario"<%} else {%> disabled="true" placeholder="Debes estar logueado para comentar" <%}%> name="comentario">
+								<button type="submit" <% if(locals.user){%> <%} else {%> disabled="true"  <%}%>class="buy-now-button">AGREGAR COMENTARIO</button>
+							</form>
 							<hr>
-
 						</article>
 
 					</section>
