foto default en producto, errors en add product, tamaño imagenes, funciona el link de ir al usuario en search

--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -29,7 +29,7 @@
 							<section class="product-box">
 								<a href="product/id/<%=productosMain[i].id%>">
 									<figure class="product-box_image">
-										<img src="<%=productosMain[i].foto %>" alt="Imagen de <%=productosMain[i].nombre %>">
+										<img src="<%=productosMain[i].foto %>" alt="Imagen de <%=productosMain[i].nombre %>" height="255 px" width="255 px" >
 									</figure>
 									<article class="product-box_data">
 										<h2><%=productosMain[i].nombre %></h2>
@@ -57,7 +57,7 @@
 							<section class="product-box">
 								<a href="product/id/<%=productosMain[i].id%>">
 									<figure class="product-box_image">
-										<img src="<%=productosMain[i].foto %>" alt="Imagen de <%=productosMain[i].nombre %>">
+										<img height="255 px" width="255 px"  src="<%=productosMain[i].foto %>" alt="Imagen de <%=productosMain[i].nombre %>">
 									</figure>
 									<article class="product-box_data">
 										<h2><%=productosMain[i].nombre %></h2>
