--- a/trabajoIntegrador/views/product.ejs
+++ b/trabajoIntegrador/views/product.ejs
@@ -32,7 +32,7 @@
 						<article class="col-12 col-lg-8 product-detail-info">
 							<p class="creador">Creado por:<strong> <a href="/profile/id/<%= producto.perfil.id %>"> <%= producto.perfil.usuario %> </a></strong></p>
 
-							<img src=<%= producto.foto %>  alt=<%= producto.nombre %> class="product-detail-img">
+							<img src=<%= producto.foto %>  alt=<%= producto.nombre %> class="product-detail-img" height="472 px" width="472 px" >
 							
 							<p class="product-detail-description">
 								<%= producto.descripcion %>
